--- a/index.html
+++ b/index.html
@@ -19,19 +19,24 @@
 
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar row">
             <nav class="navbar-left row">
                 <nav class="dropbox-logo row">
                     <img src="img/logo-small.png" alt="Logo" class="logo">
                 </nav>
                 <ul>
-                    <li><a href="#">Perché Dropbox</a></li>
-                    <li><a href="#">Funzioni</a></li>
-                    <li><a href="#">Piani e prezzi</a></li>
+                    <li><a href="#" class="header-info">Perché Dropbox</a></li>
+                    <li><a href="#" class="header-info">Funzioni</a></li>
+                    <li><a href="#" class="header-info">Piani e prezzi</a></li>
                 </ul>
             </nav>
-            <nav class="navbar-right">
-
+            <nav class="navbar-right row">
+                <ul>
+                    <li><a href="#" class="header-support">Supporto</a></li>
+                    <li><a href="#" class="header-support">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#" class="header-login">Accedi</a></li>
+                    <li><a href="#" class="blue-btn">Inizia</a></li>
+                </ul>
             </nav>
         </nav>
 
@@ -39,6 +44,13 @@
             <div class="big-container">
                 <div class="jumbo-box">
                     <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+
+                    <div class="row">
+                        <div class="jumbo-left">
+                        </div>
+                        <div class="jumbo-right">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
