--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar row">
             <nav class="navbar-left row">
                 <nav class="dropbox-logo row">
-                    <img src="img/logo-small.png" alt="Logo" class="logo">
+                    <img src="img/logo-small.png" alt="Logo" id="logo">
                 </nav>
                 <ul>
                     <li><a href="#" class="header-info">Perché Dropbox</a></li>
@@ -45,12 +45,26 @@
                 <div class="jumbo-box">
                     <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
 
-                    <div class="row">
-                        <div class="jumbo-left">
+                        <div class="jumbo-both row">
+                            <nav class="jumbo-left row">
+                                <nav class="jumbo-description">
+                                    <p class="p-jumbo">Finalmente tutti i i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Buisness è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                                    <nav class="free-trial">
+                                        <a href="#" class="blue-btn">Inizia la tua prova gratuita</a>
+                                    </nav>
+                                    <nav>
+                                        <a href="#" class="cancel-subscription">Annulla in qualsiasi momento</a>
+                                    </nav>
+                                    <nav class="buisness-link">
+                                        <a href="#" class="arrow-down"><i class="fas fa-arrow-down fa-bounce fa-3x"></i></a>
+                                    </nav>
+                                </nav>
+                            </nav>
+
+                            <nav class="jumbo-right">
+                                <img src="img/jumbo.png" alt="Jumbo img" class="jumbo-img">
+                            </nav>
                         </div>
-                        <div class="jumbo-right">
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
