fixed link logo

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <header>
         <nav class="navbar row">
             <nav class="navbar-left row">
-                <nav class="dropbox-logo row">
-                    <img src="img/logo-small.png" alt="Logo" id="logo">
+                <nav class="dropbox-logo">
+                    <a href="#" class="link-logo row"><img src="img/logo-small.png" alt="Logo" id="logo"></a>
                 </nav>
                 <ul>
                     <li><a href="#" class="header-info">Perché Dropbox</a></li>
