added buisness section with cards

--- a/index.html
+++ b/index.html
@@ -68,6 +68,35 @@
                 </div>
             </div>
         </div>
+
+        <main class="small-container">
+            <section class="buisness">
+                <h2>Trova il piano buisness che fa per te</h2>
+
+                <nav class="row">
+                    <div class="billing-type row">
+                        <div class="monthly-billing row">
+                           <div class="checked-btn"></div>
+                            <p class="monthly">Fatturazione mensile</p>
+                        </div>
+
+                        <div class="annual-billing row">
+                            <div class="unchecked-btn"></div>
+                             <p class="annual">Fatturazione annuale</p>
+                         </div>
+                    </div>
+                </nav>
+
+                <nav class="buisness-cards row">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card long-card"></div>
+                </nav>
+
+            </section>
+        </main>
+
     </header>
     
 </body>
