--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="relative">
         <nav class="navbar row">
             <nav class="navbar-left row">
                 <nav class="dropbox-logo">
@@ -88,7 +88,46 @@
                 </nav>
 
                 <nav class="buisness-cards row">
-                    <div class="card"></div>
+                    <nav class="card">
+                        <div class="top-card">
+                            <i class="fa-solid fa-user"></i> Singolo
+                        </div>
+                        <nav>
+                            <div class="card-center">
+                                <h3>Professional</h3>
+                                <div class="price">
+                                    <strong class="line-height50">€ 12,00</strong>
+                                    <div class="payment-installment">/mese</div>
+                                </div>
+                            </div>
+
+                            <nav class="card-center-info">
+                                <div class="service">
+                                    <div class="row relative">
+                                        <i class="fa-solid fa-user user"></i> 
+                                        <span>1 utente</span>
+                                    </div>
+                                    <div class="row relative">
+                                        <i class="fa-solid fa-folder space"></i> 
+                                        <span>5 TB di spazio di arciviazione sicuro</span>
+                                    </div>
+                                    <div class="row relative">
+                                        <i class="fa-solid fa-share-nodes functions"></i> 
+                                        <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                    </div>
+                                </div>
+
+                                <nav class="">
+                                    <a href="#" class="big-blue-btn free-month">Prova gratis per 30 giorni</a>
+                                    <span class="or">oppure</span> <a href="#">acquista ora</a>
+                                </nav>
+
+                                
+
+                            </nav>
+                        </nav>
+                    </nav>
+
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card long-card"></div>
