buisness operations section

--- a/index.html
+++ b/index.html
@@ -287,19 +287,63 @@
                 <h2>Esegui più operazioni con Dropbox Buisness</h2>
                 <div class="operations-cards row">
                     <div class="op-card">
-
+                        <div class="operations-img">
+                            <img src="img/business-feature-switching-tools.png" alt="Switching Tools">
+                        </div>
+                        <div>
+                            <h3 class="mb20">Passa di meno da uno strumento all'altro</h3>
+                            <p class="fs18">porta a termine le attività quitidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
                     </div>
-                    <div class="op-card">
 
+                    <div class="op-card">
+                        <div class="operations-img">
+                            <img src="img/business-feature-send-files-it.png" alt="Send Files">
+                        </div>
+                        <div>
+                            <h3 class="mb20">Passa di meno da uno strumento all'altro</h3>
+                            <p class="fs18">porta a termine le attività quitidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
                     </div>
-                    <div class="op-card">
 
+                    <div class="op-card">
+                        <div class="operations-img">
+                            <img src="img/business-feature-coordinate-it.png" alt="Coordinate">
+                        </div>
+                        <div>
+                            <h3 class="mb20">Passa di meno da uno strumento all'altro</h3>
+                            <p class="fs18">porta a termine le attività quitidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
                     </div>
-                    <div class="op-card">
 
+                    <div class="op-card">
+                        <div class="operations-img">
+                            <img src="img/business-feature-integrations-it.png" alt="Integrations">
+                        </div>
+                        <div>
+                            <h3 class="mb20">Passa di meno da uno strumento all'altro</h3>
+                            <p class="fs18">porta a termine le attività quitidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
                     </div>
-                    <div class="op-card">
 
+                    <div class="op-card">
+                        <div class="operations-img">
+                            <img src="img/business-feature-multi-device.png" alt="Multy Device">
+                        </div>
+                        <div>
+                            <h3 class="mb20">Passa di meno da uno strumento all'altro</h3>
+                            <p class="fs18">porta a termine le attività quitidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
+                    </div>
+
+                    <div class="op-card">
+                        <div class="operations-img">
+                            <img src="img/business-feature-security.png" alt="Securety">
+                        </div>
+                        <div>
+                            <h3 class="mb20">Passa di meno da uno strumento all'altro</h3>
+                            <p class="fs18">porta a termine le attività quitidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                        </div>
                     </div>
                 </div>
             </section>
