first brand box

--- a/index.html
+++ b/index.html
@@ -359,11 +359,43 @@
         </nav> 
                     
         <section class="custumers">
-            <nav class="custumers-container">
+            <nav class="custumers-container row">
                 <nav class="custumers-area row">
-                    <nav class="custumers-left"></nav>
-                    <nav class="custumers-center"></nav>
-                    <nav class="custumers-right"></nav>
+                    <nav class="custumers-left big-square row">
+                        <nav class="square-col row">
+
+                            <nav class="squares designit-brand">
+                                <nav class="ss-bg design-green">
+                                    <a href="#" class="no-td">
+                                        <nav>
+                                            <div class="centered-img row">
+                                                <img src="img/designit.svg" alt="White Designit" class="invert-filter">
+                                            </div>
+                                        </nav>
+                                    </a>
+                                </nav>
+                            </nav>
+
+                            <nav class="squares"></nav>
+                            <nav class="squares"></nav>
+                            <nav class="squares"></nav>
+                        </nav>
+                    </nav>
+                    <nav class="custumers-center big-square">
+                        <a href="#" class="no-td">
+                            <nav class="bgc-square-center bs-padding">
+                                <nav>
+                                    <img src="img/designit.svg" alt="Designit" class="designit-img">
+                                    <div class="img-border"></div>
+                                </nav>
+                                <p class="fs20">"I membri del nostro team lavorano costantemente in paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper."</p>
+                                <p class="fs20 morten">morten Thomasen, Global IT Lead</p>
+                            </nav>
+                        </a>
+                    </nav>
+                    <nav class="custumers-right big-square row">
+
+                    </nav>
                 </nav>
             </nav>
         </section>
