--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                         <div class="card">
                             <div class="top-card">
-                                <i class="fa-solid fa-building"></i></i> Azienda
+                                <i class="fa-solid fa-building"></i> Azienda
                             </div>
                             <nav>
                                 <div class="card-center">
@@ -256,7 +256,7 @@
 
                         <div class="card long-card">
                             <div class="top-card">
-                                <i class="fa-solid fa-building"></i></i> Team
+                                <i class="fa-solid fa-building"></i> Team
                             </div>
                             <div class="padding-long-card">
                                 <div class="enterprice row">
