--- a/index.html
+++ b/index.html
@@ -106,18 +106,20 @@
 
                                 <nav class="card-center-info">
                                     <div class="service">
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-user user"></i> 
-                                            <span>1 utente</span>
-                                        </div>
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-folder space"></i> 
-                                            <span>5 TB di spazio di arciviazione sicuro</span>
-                                        </div>
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-share-nodes functions"></i> 
-                                            <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
-                                        </div>
+                                        <ul class="mt20">
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-user user"></i> 
+                                                <span>1 utente</span>
+                                            </li>
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-folder space"></i> 
+                                                <span>5 TB di spazio di arciviazione sicuro</span>
+                                            </li>
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-share-nodes functions"></i> 
+                                                <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                            </li>
+                                        </ul>
                                     </div>
 
                                     <nav>
@@ -126,15 +128,19 @@
                                     </nav>
 
                                     <div class="highlights">
-                                        <strong class="line-height50">Punti salienti del piano</strong>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Invia file fino a 100 GB con Dropbox Transfert</span>
-                                        </div>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Cartelle offline su dispositivi mobili</span>
-                                        </div>
+                                        <ul>
+                                            <li>
+                                                <strong class="line-height50">Punti salienti del piano</strong>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Invia file fino a 100 GB con Dropbox Transfert</span>
+                                            <li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Cartelle offline su dispositivi mobili</span>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </nav>
                             </nav>
@@ -155,18 +161,20 @@
 
                                 <nav class="card-center-info">
                                     <div class="service">
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-user user"></i> 
-                                            <span>3 o più utenti</span>
-                                        </div>
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-folder space"></i> 
-                                            <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
-                                        </div>
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-share-nodes functions"></i> 
-                                            <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
-                                        </div>
+                                        <ul class="mt20">
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-user user"></i> 
+                                                <span>3 o più utenti</span>
+                                            </li>
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-folder space"></i> 
+                                                <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
+                                            </li>
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-share-nodes functions"></i> 
+                                                <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
+                                            </li>
+                                        </ul>
                                     </div>
 
                                     <nav>
@@ -175,27 +183,31 @@
                                     </nav>
 
                                     <div class="highlights">
-                                        <strong class="line-height50">Punti salienti del piano</strong>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Nessun limite di spazio per i file</span>
-                                        </div>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Cartelle offline su dispositivi mobili</span>
-                                        </div>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Risparmio del 50% rispetto alle iscrizioni signole</span>
-                                        </div>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Possibilità di inserire nuovi membri del team</span>
-                                        </div>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Gestione dei permessi in base ai ruoli</span>
-                                        </div>
+                                        <ul>
+                                            <li>
+                                                <strong class="line-height50">Punti salienti del piano</strong>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Nessun limite di spazio per i file</span>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Cartelle offline su dispositivi mobili</span>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Risparmio del 50% rispetto alle iscrizioni signole</span>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Possibilità di inserire nuovi membri del team</span>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Gestione dei permessi in base ai ruoli</span>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </nav>
                             </nav>
@@ -216,18 +228,20 @@
 
                                 <nav class="card-center-info">
                                     <div class="service">
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-user user"></i> 
-                                            <span>10 o più utenti</span>
-                                        </div>
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-folder space"></i> 
-                                            <span>Soluzioni personalizzabili per la tua azienda</span>
-                                        </div>
-                                        <div class="row relative">
-                                            <i class="fa-solid fa-share-nodes functions"></i> 
-                                            <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
-                                        </div>
+                                        <ul class="mt20">
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-user user"></i> 
+                                                <span>10 o più utenti</span>
+                                            </li>
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-folder space"></i> 
+                                                <span>Soluzioni personalizzabili per la tua azienda</span>
+                                            </li>
+                                            <li class="row relative">
+                                                <i class="fa-solid fa-share-nodes functions"></i> 
+                                                <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
+                                            </li>
+                                        </ul>
                                     </div>
 
                                     <nav>
@@ -236,19 +250,23 @@
                                     </nav>
 
                                     <div class="highlights">
-                                        <strong class="line-height50">Punti salienti del piano</strong>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Cartelle offline su dispositivi mobili</span>
-                                        </div>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Servizio assistenza 24/h</span>
-                                        </div>
-                                        <div class="div-highlights row relative">
-                                            <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
-                                            <span class="highlights-span">Possibilità di personalizzazione totale</span>
-                                        </div>
+                                        <ul>
+                                            <li>
+                                                <strong class="line-height50">Punti salienti del piano</strong>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Cartelle offline su dispositivi mobili</span>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Servizio assistenza 24/h</span>
+                                            </li>
+                                            <li class="div-highlights row relative">
+                                                <i class="fa-solid fa-check check" style="color: #0264FF;"></i>
+                                                <span class="highlights-span">Possibilità di personalizzazione totale</span>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </nav>
                             </nav>
